--- a/app/design/frontend/foundation/default/template/catalog/product/price_catalog.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/price_catalog.phtml
@@ -264,12 +264,21 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                         <p class="regular-price">
                             <span class="price" id="product-price-<?php echo $_id ?><?php echo $this->getIdSuffix() ?>">
                     <?php if ($_finalPrice == $_price): ?>
-                        <?php echo $_coreHelper->formatPrice($_price, true) ?>
+                        <?php if ($_price > 0): ?>
+                            <?php echo $_coreHelper->formatPrice($_price, true) ?>
+                        <?php else: ?>
+                            <?php echo $this->__('Preis auf Anfrage'); ?>
+                        <?php endif; ?>
                     <?php else: ?>
-                        <?php echo $_coreHelper->formatPrice($_finalPrice, true) ?>
+                        <?php if ($_price > 0): ?>
+                            <?php echo $_coreHelper->formatPrice($_finalPrice, true) ?>
+                        <?php else: ?>
+                            <?php echo $this->__('Preis auf Anfrage'); ?>
+                        <?php endif; ?>
                     <?php endif; ?>
                         </span>
                         </p>
+                    <?php if ($_price > 0): ?>
                         <p class="mwst-price">
                             <span class="price_mwst">
                             <?php $_store_id = Mage::app()->getStore()->getId(); ?>
@@ -290,6 +299,7 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                             <?php endif; ?>
                         </span>
                         </p>
+                        <?php endif; ?>
                     <?php endif; ?>
                 <?php endif; ?>
             <?php endif; ?>
