--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -280,6 +280,10 @@
         }
         .price {
           margin: 0;
+          padding: 0 !important;
+          font-size: 1rem;
+          vertical-align: middle;
+          color: $success-color;
           span.price {
             padding: 0 !important;
             font-size: 1rem;
@@ -309,7 +313,6 @@
         }
         .price {
           vertical-align: middle;
-          color: $primary-color;
           font-weight: 600;
         }
       }
