--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -32,7 +32,7 @@
         <div class="brand">
             <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
                 <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
-                     alt="<?php echo $this->getLogoAlt() ?>" title="<?php echo $this->getLogoAlt() ?>"/>
+                     alt="<?php echo $this->getLogoAlt() ?>" title="<?php echo $this->getLogoAlt() ?>" width="300" height="58"/>
             </a>
         </div>
         <div class="trusted">
