add width & height for images - layoutshift

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -19,7 +19,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                                  data-src="<?php echo $_category->getCategoryImage(200, 200) ?>"
                                  alt="<?php echo $this->htmlEscape($_category->getName()) ?>"
                                  title="<?php echo $title ?>"
-                                 width="200" />
+                                 width="200"
+                                 height="200" />
                         </a>
                     <?php endif; ?>
                     <h2 class="category-name">
@@ -38,7 +39,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/jurashop.jpg'); ?>"
                      alt="JURA Shop"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/jura'; ?>"
@@ -53,7 +55,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/bartscher-shop.png'); ?>"
                      alt="Bartscher Shop"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/bartscher'; ?>"
@@ -68,7 +71,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/aliseo-profishop.png'); ?>"
                      alt="Aliseo Shop"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/aliseo'; ?>"
@@ -83,7 +87,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/pacojet.jpg'); ?>"
                      alt="PacoJet Spezial"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
@@ -98,7 +103,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/holdomat.jpg'); ?>"
                      alt="Hugentobler Spezial"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
@@ -113,7 +119,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/abwrackpraemie-400x400.jpg'); ?>"
                      alt="Umweltprämie & Abwrackprämie"
-                     width="200" />
+                     width="200"
+                     height="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'altgeraeteentsorgung'; ?>"
