--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -312,7 +312,7 @@
 $tsId = 'X6B5E9287FD5871CE74DA1B1775EB2D64';
 $cacheFileName = Mage::getBaseDir('base') . '/var/tmp/' . $tsId . '.json';
 $cacheTimeOut = 43200; // half a day
-$apiUrl = 'http://api.trustedshops.com/rest/public/v2/shops/' . $tsId . '/quality/reviews.json';
+$apiUrl = 'https://api.trustedshops.com/rest/public/v2/shops/' . $tsId . '/quality/reviews.json';
 $reviewsFound = false;
 
 if (!function_exists('trustedshopscachecheck')) {
@@ -332,12 +332,16 @@ if (!trustedshopscachecheck($cacheFileName, $cacheTimeOut)) {
     curl_setopt($ch, CURLOPT_HEADER, false);
     curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
     curl_setopt($ch, CURLOPT_POST, false);
+    curl_setopt($ch, CURLOPT_CUSTOMREQUEST, 'GET');
     curl_setopt($ch, CURLOPT_URL, $apiUrl);
     $output = curl_exec($ch);
+    if($output) {
+        file_put_contents($cacheFileName, $output);
+    }
     curl_close($ch);
     // Write the contents back to the file
     // Make sure you can write to file's destination
-    file_put_contents($cacheFileName, $output);
+
 }
 if ($jsonObject = json_decode(file_get_contents($cacheFileName), true)) {
     $result = $jsonObject['response']['data']['shop']['qualityIndicators']['reviewIndicator']['overallMark'];
