--- a/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
@@ -33,8 +33,7 @@
     <?php if ($_product->getFinalPrice() >= $_product->getPrice()): ?>
         <li class="bullet-item">
             <div class="custom-quote text-center">
-                <p class="callout success"><?php echo $this->__('Erfragen Sie unseren'); ?>
-                    <strong><?php echo $this->__('aktuellen Tagespreis!'); ?></strong><br>
+                <p class="callout success"><?php echo $this->__('Erfragen Sie unseren aktuellen Tagespreis!'); ?><br>
                     <i class="fa fa-phone"></i> <?php echo $this->__('0800 456 6000'); ?></p>
             </div>
         </li>
