change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -56,9 +56,6 @@
                         </li>
                     <?php endif ?>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'streitschlichtung')); ?>"><?php echo $this->__('Streitschlichtung') ?></a>
-                    </li>
-                    <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'batteriegesetz')); ?>"><?php echo $this->__('Batteriegesetz') ?></a>
                     </li>
                     <li>
@@ -66,6 +63,9 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl(''); ?>"><?php echo $this->__('Startseite') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'jobs')); ?>"><?php echo $this->__('Jobs') ?></a>
                     </li>
                 </ul>
                 <div class="reveal large" id="quality" data-reveal></div>
@@ -97,9 +97,6 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leistungen')); ?>"><?php echo $this->__('Leistungen') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'digitale-kueche-smart-kitchen')); ?>"><?php echo $this->__('Digitale K&uuml;che') ?></a>
-                    </li>
-                    <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'altgeraeteentsorgung')); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a>
                     </li>
                     <li>
@@ -110,6 +107,9 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leasing-mietkauf')); ?>"><?php echo $this->__('Leasing/Mietkauf') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'streitschlichtung')); ?>"><?php echo $this->__('Streitschlichtung') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/fax/faxbestellung.pdf'; ?>"
