--- a/app/design/frontend/foundation/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/login.phtml
@@ -2,6 +2,7 @@
 <div class="col2-set">
     <?php echo $this->getChildHtml('login_before') ?>
     <div class="col-1">
+        <p class="h2"><?php echo $this->__('weitere Zahlungsarten') ?></p>
         <h3><?php if ($this->getQuote()->isAllowedGuestCheckout()): ?><?php echo $this->__('Checkout as a Guest or Register') ?><?php else: ?><?php echo $this->__('Register to Create an Account') ?><?php endif; ?></h3>
         <?php if ($this->getQuote()->isAllowedGuestCheckout()): ?>
             <p><?php echo $this->__('Register with us for future convenience:') ?></p>
